# Mundial_lakehouse_2026

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: dag_dbt_transform.py  dag_ingest_wc2026.py  dag_retrain_model.py
api/: database.py  main.py
api/routers/: matches.py  predict.py  teams.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: dim_players.sql  dim_teams.sql  fact_matches.sql  mart_champion_odds.sql  mart_performance.sql  mart_player_scouting.sql  mart_predictions.sql  mart_xg_compare.sql
dbt/models/staging/: schema.yml  stg_events_sb.sql  stg_matches_sb.sql  stg_matches_wc2026.sql  stg_onside_champions.sql  stg_onside_predictions.sql  stg_player_stats_sb.sql  stg_player_stats_wc2026.sql  stg_wc2026_per90.sql  stg_wc2026_squads.sql  (+3 more)
dbt/seeds/: team_codes.csv
docker/: init-db.sql
ingestion/: api_football_client.py  bronze_to_neon.py  kaggle_loader.py  minio_client.py  onside_loader.py  rising_transfers_loader.py  statsbomb_loader.py  worldcup26_client.py
ml/: evaluate.py  features.py  train.py
notebooks/: 01_wc2026_fixtures.ipynb  02_wc_history.ipynb  03_statsbomb_matches.ipynb  04_statsbomb_xg.ipynb  05_squads_per90.ipynb  06_onside_predictions.ipynb  07_monte_carlo.ipynb  utils.py
streamlit_app/: app.py
streamlit_app/pages/: 1_📊_Standings.py  2_🔮_Predicciones.py  3_🏆_Bracket.py  4_📈_Analytics.py  5_🤖_Modelo.py
streamlit_app/utils/: charts.py  db.py
tests/: test_api.py  test_worldcup26_client.py
