[project]
name = "mundial-2026"
version = "0.1.0"
description = "Pipeline de inteligencia táctica del Mundial 2026 — arquitectura medallón Bronze/Silver/Gold"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Ingesta y transporte
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # Bronze layer
    "minio>=7.2.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    # Fuentes de datos
    "statsbombpy>=1.1.0",
    # PostgreSQL (Neon.tech para Silver/Gold, scripts directos)
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # dbt (transformaciones Silver + Gold en Neon)
    "dbt-postgres>=1.8.0,<2.0.0",
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    # ML
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
